# data_exchange_grpc

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  datashare.grpc.pb.cc  datashare.grpc.pb.h  datashare.pb.cc  datashare.pb.h  datashare.proto  datashare_client.cc  datashare_mock.grpc.pb.h  datashare_server.cc  datashare_test.cc  file1.txt
clientFolder/: exchangeFile.txt
